Correct spelling mistake

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 {
     "name": "3ev/laravel-assets",
 
-    "description": "3ev's interal Laravel asset helpers",
+    "description": "3ev's internal Laravel asset helpers",
 
     "homepage": "https://github.com/3ev/laravel-assets",
 
